# quant-trading-platform

./: .gitignore  AGENTS.md  PRD.md  README.md  TODO.md  design.pen  pencil.pen  quant-learn-dev-plan.md
backend/: Cargo.toml  README.md  main.py  pytest.ini  requirements.txt
backend/api/: backtest.py  dashboard.py  learning.py  stock_data.py  strategy.py
backend/app/: .env  main.py
backend/app/core/: config.py  logger.py
backend/app/models/: common_models.py  futures_models.py  index_models.py  stock_models.py
backend/app/routers/: futures_router.py  index_router.py  stock_router.py
backend/app/services/: akshare_service.py
backend/core/: config.py  database.py
backend/data/: fetch.py  process.py
backend/models/: models.py
backend/src/: lib.rs  main.rs  routes.rs  types.rs
backend/src/data/: cache.rs  market_data.rs  mod.rs
backend/src/engine/: backtest.rs  mod.rs
backend/src/strategies/: bollinger.rs  ma_cross.rs  macd.rs  mod.rs  rsi.rs
backend/strategies/: basic.py  momentum.py  value.py
backend/tests/: api_routes_tests.rs  backtest_engine_tests.rs  cache_tests.rs  conftest.py  market_data_tests.rs  strategy_tests.rs  test_api.py  watchlist_settings_tests.rs
client/: package-lock.json  package.json
client/src/: App.js
database/: quant_learning.db
docs/: api-contract.md  bugfix-v0.1.1.md
frontend/: eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: commands.rs  lib.rs  main.rs
server/: main.py  pyproject.toml
server/.github/workflows/: tests.yml
server/app/api/: data.py  docs.py  strategy.py
server/app/core/: config.py  database.py  security.py
server/app/models/: strategy.py  user.py
server/app/schemas/: strategy.py  user.py
server/app/services/: backtest_service.py  data_service.py
server/tests/: Makefile  README.md  conftest.py  pytest.ini  requirements-test.txt  run_tests.py  test_api_data.py  test_api_strategy.py  test_integration.py  test_performance.py  test_services.py
(+188 files in other folders)
