[package]
name = "quant-backend"
version = "0.1.0"
edition = "2024"
default-run = "quant-backend"

[dependencies]
axum = "0.8.8"
reqwest = { version = "0.13.2", features = ["json"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
serde_json = "1.0"
rand = "0.8"
chrono = "0.4"

[dev-dependencies]
axum-test = "18"
tokio-test = "0.4"
chrono = "0.4"
