[project]
name = "server"
version = "0.1.0"
description = "Quantitative Trading Learning Platform Backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.23",
    "alembic>=1.12.1",
    "pydantic>=2.5.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "akshare>=1.12.0",
    "pandas>=2.1.3",
    "numpy>=1.25.2",
    "redis>=5.0.1",
    "celery>=5.3.4",
    "pytest>=7.4.3",
    "pytest-asyncio>=0.23.2",
    "httpx>=0.25.2",
    "email-validator>=2.1.0",
    "uv>=0.7.13",
    "pydantic-settings>=2.10.0",
]

