[package]
name = "quant-learn-desktop"
version = "0.1.0"
edition = "2021"
description = "量化学习平台桌面应用"

[lib]
name = "quant_learn_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 直接依赖后端库，复用所有业务逻辑
quant-backend = { path = "../../backend" }
# rusqlite 用于初始化数据库连接
rusqlite = { version = "0.38", features = ["bundled"] }
